Fixed some mobile layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ nav div ul li {
 }
 
 #sponsors {
-	padding-bottom: 2em;
+	padding: 0 0 2em 0;
 }
 
 #sponsor-logos {
@@ -192,10 +192,6 @@ nav div ul li {
 	margin: 0;
 }
 
-.sponsors-row {
-	padding: 1em;
-}
-
 .sponsors-row a {
 	margin: auto 1em 2em 1em;
 }
@@ -214,6 +210,7 @@ nav div ul li {
 
 .sponsor-logo-3 {
 	width: 500px;
+	max-width: 100%;
 }
 
 .img-highlight {
